syntax = "proto3";

package blockjoy.blockvisor.v1;

import "blockvisor.proto";

service Blockvisor {
    rpc CreateNode(CreateNodeRequest) returns (CreateNodeResponse);
    rpc UpgradeNode(UpgradeNodeRequest) returns (UpgradeNodeResponse);
    rpc DeleteNode(DeleteNodeRequest) returns (DeleteNodeResponse);
    rpc StartNode(StartNodeRequest) returns (StartNodeResponse);
    rpc StopNode(StopNodeRequest) returns (StopNodeResponse);
    rpc GetNodeJobs(GetNodeJobsRequest) returns (GetNodeJobsResponse);
    rpc GetNodeLogs(GetNodeLogsRequest) returns (GetNodeLogsResponse);
    rpc GetBabelLogs(GetBabelLogsRequest) returns (GetBabelLogsResponse);
    rpc GetNodeKeys(GetNodeKeysRequest) returns (GetNodeKeysResponse);
    rpc GetNodeIdForName(GetNodeIdForNameRequest) returns (GetNodeIdForNameResponse);
    rpc ListCapabilities(ListCapabilitiesRequest) returns (ListCapabilitiesResponse);
    rpc Blockchain(BlockchainRequest) returns (BlockchainResponse);
    rpc GetNodeMetrics(GetNodeMetricsRequest) returns (GetNodeMetricsResponse);
}
